@@ -28,3 +28,7 @@ colorrealze = 7
 limitador = 10
 feeds = http://www.gatoloko.org/index.php?q=rss.xml,http://www.slashdot.com/slashdot.rss,http://www.media-vida.net/mediavida.rdf,http://feeds.feedburner.com/ubuntu-fridge,http://fridge.ubuntu.com/event/feed
 
+[autosend]
+activo = 1
+directorio = autosend
+disparador = ^!autosend
